k8s/realworld-flux-stack/dev/platform/envoy/reference-grant-cert-manager.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-to-cert-manager
  namespace: cert-manager
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-system
  to:
    - group: ""
      kind: Secret
      name: root-tls

    - group: ""
      kind: Secret
      name: grafana-tls
