k8s/realworld-flux-stack/dev/platform/envoy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80

    - name: https
      port: 443
      protocol: HTTPS
      hostname: "mydevopsjourney.fun"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: mydevopsjourney-fun-tls

    - name: https-wildcard
      port: 443
      protocol: HTTPS
      hostname: "*.mydevopsjourney.fun"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: wildcard-mydevopsjourney-fun-tls
