k8s/realworld-flux-stack/dev/platform/envoy/tls-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tls-redirect
  namespace: envoy-system
spec:
  parentRefs:
    - name: envoy-gateway
      sectionName: http
  hostnames:
    - "mydevopsjourney.fun"
    - "grafana.mydevopsjourney.fun"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
